# voicegateway-examples

./: .gitignore  CLAUDE.md  INDEX.md  README.md
examples/01-hello-voicegateway/: .env.example  README.md  agent.py  pyproject.toml
templates/voicegateway-base/: .env.example  README.md  agent.py  pyproject.toml
